# portfolio

./: news.html
Sminex-3/css/blocks/: advantages.css  info-banner.css
Sminex-3/css/global/: fonts.css
Sminex/css/: style.css
Sminex/css/blocks/: card.css  modernization.css
Sminex/css/global/: fonts.css
gazprom/: articles.html
gazprom/css/: style.css
gazprom/css/blocks/: header.css  section.css  sectionsation.css  sectionssections.css
gazprom/css/global/: container.css  reboot.css
pywallet/: .gitignore  README.md  docker-compose.yml  pyproject.toml
pywallet/src/: __main__.py
pywallet/src/common/: crud.py  database.py  settings.py
pywallet/src/handlers/: v1.py
pywallet/src/models/: __init__.py  models.py
pywallet/src/schemas/: reqs.py  responses.py
