[project]
name = "pywallet"
version = "0.1.0"
description = ""
authors = [
    {name = "SwayKh",email = "khatrisumit712@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "uvicorn (>=0.47.0,<0.48.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "pydantic (>=2.13.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
